--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>section
         <article>
             article
-            <p>h1,h2,h2</p>
+            <p><strong>h1,h2,h2</strong></p>
             <p>p</p>
         </article>
     </section>
